--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "log4js": "^6.9.1"
+    "log4js": "^6.9.1",
+    "mongoose": "^8.6.3"
   }
 }
